Inherit vertical align to fix note action buttons on some versions of Chrome. Unsure how this broke, will require more investigation, but this will at least keep buttons look correct.

--- a/ProMa/wwwroot/Styles/Stylings.css
+++ b/ProMa/wwwroot/Styles/Stylings.css
@@ -177,6 +177,10 @@ p.weaktext {
 	vertical-align: top;
 }
 
+	.noteAction > a {
+		vertical-align: inherit;
+	}
+
 	.noteAction .promaicon:not(.promaicon-wait) {
 		vertical-align: top;
 	}
